MAPREDUCE-1248. Fixes redudant memory copying in StreamKeyValUtil. Contributed by Ruibang He.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@961578 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -72,6 +72,9 @@ Trunk (unreleased changes)
 
     MAPREDUCE-1893. Slive with multiple reducers. (shv)
 
+    MAPREDUCE-1248. Fixes redudant memory copying in StreamKeyValUtil.
+    (Ruibang He via amareshwari)
+
   OPTIMIZATIONS
 
     MAPREDUCE-1354. Enhancements to JobTracker for better performance and
