MAPREDUCE-1528. Incorporates the changes to the credentials API done in HADOOP-6845. Also, introduces Credentials in JobConf, and in JobContext. Contributed by Jitendra Pandey and Arun Murthy.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@962682 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -155,6 +155,10 @@ Trunk (unreleased changes)
     MAPREDUCE-1820. Fix InputSampler to clone sampled keys. (Alex Kozlov via
     cdouglas)
 
+    MAPREDUCE-1528. Incorporates the changes to the credentials API done in
+    HADOOP-6845. Also, introduces Credentials in JobConf, and in JobContext.
+    (Jitendra Pandey and Arun Murthy via ddas)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
