MAPREDUCE-1848. Put number of speculative, data local, rack local tasks in JobTracker metrics. (Scott Chen via dhruba)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@964640 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -80,6 +80,9 @@ Trunk (unreleased changes)
     Also includes compatibility with security enhancements, and scalability
     improvements. (Amar Kamat, Rahul Singh, Hong Tang, and cdouglas)
 
+    MAPREDUCE-1848. Put number of speculative, data local, rack local 
+    tasks in JobTracker metrics. (Scott Chen via dhruba)
+
   OPTIMIZATIONS
 
     MAPREDUCE-1354. Enhancements to JobTracker for better performance and
