--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -358,6 +358,9 @@ Release 0.21.0 - Unreleased
 
   IMPROVEMENTS
 
+    MAPREDUCE-1812. New properties for suspend and resume process. (Vinay
+    Thota via cos)
+
     MAPREDUCE-463. Makes job setup and cleanup tasks as optional.
     (Amareshwari Sriramadasu via sharad)
 
