MAPREDUCE-1896. [Herriot] New property for multi user list. Contributed by Vinay Thota.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@964932 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -358,6 +358,9 @@ Release 0.21.0 - Unreleased
 
   IMPROVEMENTS
 
+    MAPREDUCE-1896. [Herriot] New property for multi user list. (Vinay Thota
+    via cos)
+
     MAPREDUCE-1812. New properties for suspend and resume process. (Vinay
     Thota via cos)
 
