MAPREDUCE-1942. 'compile-fault-inject' should never be called directly. Contributed by Konstantin Boudnik.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@964934 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -881,6 +881,9 @@ Release 0.21.0 - Unreleased
 
   BUG FIXES
 
+    MAPREDUCE-1942. 'compile-fault-inject' should never be called directly.
+    (Konstantin Boudnik)
+
     MAPREDUCE-1791. Remote cluster control functionality needs JavaDocs
     improvement (Konstantin Boudnik)
 
