MAPREDUCE-1911. Fixes errors in -info message in streaming. Contributed by Amareshwari Sriramadasu
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@965370 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -173,6 +173,8 @@ Trunk (unreleased changes)
     MAPREDUCE-1621. Fixes NPE in TextOutputReader.getLastOutput if it has never
     read any output. (amareshwari)
 
+    MAPREDUCE-1911. Fixes errors in -info message in streaming. (amareshwari) 
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
