MAPREDUCE-1772. Corrects errors in streaming documentation in forrest. Contributed by Amareshwari Sriramadasu
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@965419 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -175,6 +175,9 @@ Trunk (unreleased changes)
 
     MAPREDUCE-1911. Fixes errors in -info message in streaming. (amareshwari) 
 
+    MAPREDUCE-1772. Corrects errors in streaming documentation in forrest.
+    (amareshwari)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
