--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -92,6 +92,8 @@ Trunk (unreleased changes)
     MAPREDUCE-1936. Modify Gridmix3 to support more tunable parameters for
     stress submission and sleep jobs. (Hong Tang via cdouglas)
 
+    MAPREDUCE-1733. Makes pipes applications secure. (Jitendra Pandey via ddas)
+
   OPTIMIZATIONS
 
     MAPREDUCE-1354. Enhancements to JobTracker for better performance and
