MAPREDUCE-1925. Fix failing TestRumenJobTraces. Contributed by Ravi Gummadi
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@967285 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -193,6 +193,8 @@ Trunk (unreleased changes)
     MAPREDUCE-1772. Corrects errors in streaming documentation in forrest.
     (amareshwari)
 
+    MAPREDUCE-1925. Fix failing TestRumenJobTraces. (Ravi Gummadi via cdouglas)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
