MAPREDUCE-1701. Fixes a problem to do with exception handling in delegation-token renewals. Contributed by Boris Shkolnik.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@980280 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -199,6 +199,9 @@ Trunk (unreleased changes)
     mapping that the tasks use at runtime for looking up delegation tokens.
     (Boris Shkolnik via ddas)
 
+    MAPREDUCE-1701. Fixes a problem to do with exception handling in 
+    delegation-token renewals. (Boris Shkolnik via ddas)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
