MAPREDUCE-1686. Fixes StreamUtil.goodClassOrNull to find classes without package names. Contributed by Paul Burkhardt
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@980704 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -205,6 +205,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1701. Fixes a problem to do with exception handling in 
     delegation-token renewals. (Boris Shkolnik via ddas)
 
+    MAPREDUCE-1686. Fixes StreamUtil.goodClassOrNull to find classes without
+    package names. (Paul Burkhardt via amareshwari)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
