MAPREDUCE-1982. Fixes Rumen's TraceBuilder to extract job name from either of configuration properties mapreduce.job.name and mapred.job.name. Contributed by Ravi Gummadi
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@981745 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -216,6 +216,10 @@ Trunk (unreleased changes)
     the owner of the localized file in the mapping from cache URIs to
     CacheStatus objects. (ddas)
 
+    MAPREDUCE-1982. Fixes Rumen's TraceBuilder to extract job name from either 
+    of configuration properties "mapreduce.job.name" and "mapred.job.name".
+    (Ravi Gummadi via amareshwari)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
