MAPREDUCE-1958. The MapReduce part corresponding to the HADOOP-6873. Contributed by Boris Shkolnik & Owen O'Malley.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@982087 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -223,6 +223,9 @@ Trunk (unreleased changes)
     of configuration properties "mapreduce.job.name" and "mapred.job.name".
     (Ravi Gummadi via amareshwari)
 
+    MAPREDUCE-1958. The MapReduce part corresponding to the HADOOP-6873.
+    (Boris Shkolnik & Owen O'Malley via ddas)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
