MAPREDUCE-1993. Fixes test failure TestTrackerDistributedCacheManagerWithLinuxTaskController. Contributed by Devaraj Das
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@982242 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -108,6 +108,10 @@ Trunk (unreleased changes)
     MAPREDUCE-1834. TestSimulatorDeterministicReplay timesout on trunk.
     (Hong Tang via mahadev)
 
+    MAPREDUCE-1993. Fixes test failure
+    TestTrackerDistributedCacheManagerWithLinuxTaskController. (Devaraj Das
+    via amareshwari)
+
   OPTIMIZATIONS
 
     MAPREDUCE-1354. Enhancements to JobTracker for better performance and
