MAPREDUCE-1926. MapReduce distribution is missing build-utils.xml
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@983122 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1726,3 +1726,7 @@ Release 0.21.0 - Unreleased
 
     MAPREDUCE-1876. Fixes TaskAttemptStartedEvent to correctly log event type
     for all task types. (Amar Kamat via amareshwari)
+
+    MAPREDUCE-1926. MapReduce distribution is missing build-utils.xml.
+    (tomwhite)
+
