MAPREDUCE-1999. Fixes ClientProtocol to use the correct DelegationTokenSelector. Contributed by Jitendra Pandey.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@983815 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -233,6 +233,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1992. Fixes a problem to do with bringing up the JobTracker in
     unsecure mode. (Kan Zhang via ddas)
 
+    MAPREDUCE-1999. Fixes ClientProtocol to use the correct 
+    DelegationTokenSelector. (Jitendra Pandey via ddas)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
