MAPREDUCE-1523. Making Mumak work with Capacity-Scheduler (Anirban Das via mahadev)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@984533 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -112,6 +112,9 @@ Trunk (unreleased changes)
     TestTrackerDistributedCacheManagerWithLinuxTaskController. (Devaraj Das
     via amareshwari)
 
+    MAPREDUCE-1523. Making Mumak work with Capacity-Scheduler (Anirban Das
+    via mahadev)
+
   OPTIMIZATIONS
 
     MAPREDUCE-1354. Enhancements to JobTracker for better performance and
