MAPREDUCE-1920. Enables completed jobstatus store by default. Contributed by Tom White
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@984641 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -115,6 +115,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1523. Making Mumak work with Capacity-Scheduler (Anirban Das
     via mahadev)
 
+    MAPREDUCE-1920. Enables completed jobstatus store by default. (Tom White
+    via amareshwari)
+
   OPTIMIZATIONS
 
     MAPREDUCE-1354. Enhancements to JobTracker for better performance and
