MAPREDUCE-1780. Missed modifications to CHANGES.txt for the previous commit.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@984684 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -242,6 +242,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1999. Fixes ClientProtocol to use the correct 
     DelegationTokenSelector. (Jitendra Pandey via ddas)
 
+    MAPREDUCE-1780. AccessControlList.toString() is used for serialization of
+    ACL in JobStatus.java. (Ravi Gummadi via vinodkv)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
