MAPREDUCE-2012. Some contrib tests fail in branch 0.21 and trunk.  Contributed by Amareshwari Sriramadasu.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@985616 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1748,3 +1748,5 @@ Release 0.21.0 - Unreleased
     MAPREDUCE-1926. MapReduce distribution is missing build-utils.xml.
     (tomwhite)
 
+    MAPREDUCE-2012. Some contrib tests fail in branch 0.21 and trunk.
+    (Amareshwari Sriramadasu via tomwhite)
