MAPREDUCE-1980. Fixes TaskAttemptUnsuccessfulCompletionEvent and TaskAttemptFinishedEvent to correctly log event type for all task types. Contributed by Amar Kamat
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@985798 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1750,3 +1750,8 @@ Release 0.21.0 - Unreleased
 
     MAPREDUCE-2012. Some contrib tests fail in branch 0.21 and trunk.
     (Amareshwari Sriramadasu via tomwhite)
+
+    MAPREDUCE-1980. Fixes TaskAttemptUnsuccessfulCompletionEvent and
+    TaskAttemptFinishedEvent to correctly log event type for all task types.
+    (Amar Kamat via amareshwari)
+
