MAPREDUCE-1856. Extract a subset of tests for smoke (DOA) validation. Contributed by Konstantin Boudnik.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@986171 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1755,3 +1755,6 @@ Release 0.21.0 - Unreleased
     TaskAttemptFinishedEvent to correctly log event type for all task types.
     (Amar Kamat via amareshwari)
 
+    MAPREDUCE-1856. Extract a subset of tests for smoke (DOA) validation (cos)
+
+
