MAPREDUCE-2022. Fixes compilation errors in TestSubmitJob. Contributed by Amareshwari Sriramadasu
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@987458 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -251,6 +251,8 @@ Trunk (unreleased changes)
     MAPREDUCE-2000. Fix parsing of JobHistory lines in Rumen when quotes are
     escaped. (Hong Tang via cdouglas)
 
+    MAPREDUCE-2022. Fixes compilation errors in TestSubmitJob. (amareshwari)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
