MAPREDUCE-1881. Improve TaskTrackerInstrumentation to enable collection of advanced metrics. Contributed by Matei Zaharia.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@987589 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -121,6 +121,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1920. Enables completed jobstatus store by default. (Tom White
     via amareshwari)
 
+    MAPREDUCE-1881. Improve TaskTrackerInstrumentation to enable collection of
+    advanced metrics. (Matei Zaharia via acmurthy)
+
   OPTIMIZATIONS
 
     MAPREDUCE-1354. Enhancements to JobTracker for better performance and
