HDFS-1349. Remove empty java files. Contributed by Eli Collins.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@988268 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -216,6 +216,8 @@ Trunk (unreleased changes)
     HDFS-1157. Modifications introduced by HDFS-1150 are breaking aspect's
     bindings (cos)
 
+    HDFS-1349. Remove empty java files. (Eli Collins)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
