HDFS-1340. A null delegation token is appended to the url if security is disabled when browsing filesystem.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@989414 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -218,6 +218,9 @@ Trunk (unreleased changes)
 
     HDFS-1349. Remove empty java files. (Eli Collins)
 
+    HDFS-1340.A null delegation token is appended to the url if security
+     is disabled when browsing filesystem. (boryas)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
