--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -218,8 +218,10 @@ Trunk (unreleased changes)
 
     HDFS-1349. Remove empty java files. (Eli Collins)
 
-    HDFS-1340.A null delegation token is appended to the url if security
-     is disabled when browsing filesystem. (boryas)
+    HDFS-1340. A null delegation token is appended to the url if security
+    is disabled when browsing filesystem. (boryas)
+    
+    HDFS-1352. Fix jsvc.location. (Eli Collins via jghoman)
 
 Release 0.21.0 - Unreleased
 
