HDFS-1320. Add LOG.isDebugEnabled() guard for each LOG.debug(..).  Contributed by Erik Steffl
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@990466 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -74,9 +74,6 @@ Trunk (unreleased changes)
     HDFS-1110. Reuses objects for commonly used file names in namenode to
     reduce the heap usage. (suresh)
 
-    HDFS-1114. Implement LightWeightGSet for BlocksMap in order to reduce
-    NameNode memory footprint.  (szetszwo)
-
     HDFS-752. Add interfaces classification to to HDFS source code. (suresh)
 
     HDFS-947. An Hftp read request is redirected to a datanode that has 
@@ -125,6 +122,12 @@ Trunk (unreleased changes)
 
     HDFS-1081. Performance regression in 
     DistributedFileSystem::getFileBlockLocations in secure systems (jghoman)
+
+    HDFS-1114. Implement LightWeightGSet for BlocksMap in order to reduce
+    NameNode memory footprint.  (szetszwo)
+
+    HDFS-1320. Add LOG.isDebugEnabled() guard for each LOG.debug(..).
+    (Erik Steffl via szetszwo)
 
   BUG FIXES
 
