MAPREDUCE-1897. trunk build broken on compile-mapred-test. Contributed by Konstantin Boudnik
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@991818 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1771,4 +1771,5 @@ Release 0.21.0 - Unreleased
 
     MAPREDUCE-1856. Extract a subset of tests for smoke (DOA) validation (cos)
 
+    MAPREDUCE-1897. trunk build broken on compile-mapred-test (cos)
 
