MAPREDUCE-1375. Fixes flaky test TestFileArgs. Contributed by Todd Lipcon
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@991846 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -268,6 +268,9 @@ Trunk (unreleased changes)
     MAPREDUCE-2021. Fixes duplicate hostnames in CombineFileInputFormat's
     split locations. (amareshwari)
 
+    MAPREDUCE-1375. Fixes flaky test TestFileArgs. (Todd Lipcon via
+    amareshwari)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
