MAPREDUCE-2023. TestDFSIO should not stop reading if curSize != bufferSize.  Contributed by Hong Tang
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@992161 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -271,6 +271,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1375. Fixes flaky test TestFileArgs. (Todd Lipcon via
     amareshwari)
 
+    MAPREDUCE-2023. TestDFSIO should not stop reading if curSize != bufferSize.
+    (Hong Tang via szetszwo)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
