HDFS-1355. ant veryclean (clean-cache) doesn't clean enough. Contributed by Luke Lu.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@992493 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -231,6 +231,9 @@ Trunk (unreleased changes)
 
     HDFS-1284. TestBlockToken fails.  (Kan Zhang via jghoman)
 
+    HDFS-1355. ant veryclean (clean-cache) doesn't clean enough. 
+    (Luke Lu via jghoman)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
