HDFS-1353.  Remove most of getBlockLocation optimization.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@992515 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -234,6 +234,8 @@ Trunk (unreleased changes)
     HDFS-1355. ant veryclean (clean-cache) doesn't clean enough. 
     (Luke Lu via jghoman)
 
+    HDFS-1353.  Remove most of getBlockLocation optimization. (jghoman)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
