MAPREDUCE-2031. Fixes test failures TestTaskLauncher and TestTaskTrackerLocalization. Contributed by Ravi Gummadi
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@992931 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -274,6 +274,9 @@ Trunk (unreleased changes)
     MAPREDUCE-2023. TestDFSIO should not stop reading if curSize != bufferSize.
     (Hong Tang via szetszwo)
 
+    MAPREDUCE-2031. Fixes test failures TestTaskLauncher and
+    TestTaskTrackerLocalization. (Ravi Gummadi via amareshwari)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
