--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -277,6 +277,9 @@ Trunk (unreleased changes)
     MAPREDUCE-2031. Fixes test failures TestTaskLauncher and
     TestTaskTrackerLocalization. (Ravi Gummadi via amareshwari)
 
+    MAPREDUCE-2046. Fixes CombineFileInputFormat to allow splits with size
+    less than DFS block size. (dhruba borthakur via amareshwari)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
