HDFS-1369. Invalid javadoc reference in FSDatasetMBean.java. Contributed by Eli Collins.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@993182 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -239,6 +239,8 @@ Trunk (unreleased changes)
 
     HDFS-1353.  Remove most of getBlockLocation optimization. (jghoman)
 
+    HDFS-1369. Invalid javadoc reference in FSDatasetMBean.java (Eli Collins)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
