MAPREDUCE-1975. Fixes unnecessary InterruptedException log in gridmix. Contributed by Ravi Gummadi
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@993210 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -280,6 +280,9 @@ Trunk (unreleased changes)
     MAPREDUCE-2046. Fixes CombineFileInputFormat to allow splits with size
     less than DFS block size. (dhruba borthakur via amareshwari)
 
+    MAPREDUCE-1975. Fixes unnecessary InterruptedException log in gridmix.
+    (Ravi Gummadi via amareshwari)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
