MAPREDUCE-1597. Fixes CombineFileInputFormat to work with non-splittable files. Contributed by Amareshwari Sriramadasu
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@993293 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -283,6 +283,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1975. Fixes unnecessary InterruptedException log in gridmix.
     (Ravi Gummadi via amareshwari)
 
+    MAPREDUCE-1597. Fixes CombineFileInputFormat to work with non-splittable
+    files. (amareshwari)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
