--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -108,6 +108,9 @@ Trunk (unreleased changes)
     HDFS-330.  Datanode Web UIs should provide robots.txt.
     (Allen Wittenauer via jghoman)
 
+    HDFS-881.  Refactor DataNode Packet header into DataTransferProtocol.
+    (Todd Lipcon via jghoman)
+
     HDFS-1036. docs for fetchdt
 
     HDFS-1318. Add JMX interface for read access to namenode and datanode
@@ -237,7 +240,7 @@ Trunk (unreleased changes)
     HDFS-1355. ant veryclean (clean-cache) doesn't clean enough. 
     (Luke Lu via jghoman)
 
-    HDFS-1353.  Remove most of getBlockLocation optimization. (jghoman)
+    HDFS-1353. Remove most of getBlockLocation optimization. (jghoman)
 
     HDFS-1369. Invalid javadoc reference in FSDatasetMBean.java (Eli Collins)
 
