HDFS-829. hdfsJniHelper.c: #include <error.h> is not portable. Contributed by Allen Wittenauer.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@993476 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -244,6 +244,9 @@ Trunk (unreleased changes)
 
     HDFS-1369. Invalid javadoc reference in FSDatasetMBean.java (Eli Collins)
 
+    HDFS-829. hdfsJniHelper.c: #include <error.h> is not portable. 
+    (Allen Wittenauer via jghoman)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
