HDFS-1361. Add -fileStatus operation to NNThroughputBenchmark. Contributed by Konstantin Shvachko.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@993542 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -27,11 +27,13 @@ Trunk (unreleased changes)
     HDFS-1150. Verify datanodes' identities to clients in secure clusters.
     (jghoman)
 
-    aHDFS-1330. Make RPCs to DataNodes timeout. (hairong)
+    HDFS-1330. Make RPCs to DataNodes timeout. (hairong)
 
     HDFS-202.  HDFS support of listLocatedStatus introduced in HADOOP-6870.
     HDFS piggyback block locations to each file status when listing a
     directory.  (hairong)
+
+    HDFS-1361. Add -fileStatus operation to NNThroughputBenchmark. (shv)
 
   IMPROVEMENTS
 
