MAPREDUCE-2032. Fixes TestJobCleanup to cleanup test directory in tearDown. Contributed by Dick King
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@994941 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -286,6 +286,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1597. Fixes CombineFileInputFormat to work with non-splittable
     files. (amareshwari)
 
+    MAPREDUCE-2032. Fixes TestJobCleanup to cleanup test directory in
+    tearDown. (Dick King via amareshwari)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
