HDFS-1310. The ClientDatanodeProtocol proxy should be stopped in DFSInputStream.readBlockLength(..).  Contributed by sam rash
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@995639 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -249,6 +249,9 @@ Trunk (unreleased changes)
     HDFS-829. hdfsJniHelper.c: #include <error.h> is not portable. 
     (Allen Wittenauer via jghoman)
 
+    HDFS-1310. The ClientDatanodeProtocol proxy should be stopped in
+    DFSInputStream.readBlockLength(..).  (sam rash via szetszwo)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
