HDFS-1357. HFTP traffic served by DataNode shouldn't use service port on NameNode. Contributed by Kan Zhang.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@996012 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -252,6 +252,9 @@ Trunk (unreleased changes)
     HDFS-1310. The ClientDatanodeProtocol proxy should be stopped in
     DFSInputStream.readBlockLength(..).  (sam rash via szetszwo)
 
+    HDFS-1357. HFTP traffic served by DataNode shouldn't use service port 
+    on NameNode. (Kan Zhang via jghoman)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
