HDFS-1111. Introduce getCorruptFileBlocks() for fsck. Contributed by Sriram Rao.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@996213 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -124,6 +124,8 @@ Trunk (unreleased changes)
     HDFS-1205. FSDatasetAsyncDiskService should name its threads.
     (Todd Lipcon via eli)
 
+    HDFS-1111. Introduce getCorruptFileBlocks() for fsck. (Sriram Rao via shv)
+
   OPTIMIZATIONS
 
     HDFS-1140. Speedup INode.getPathComponents. (Dmytro Molkov via shv)
